// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusBar Snapshot Tests > matches snapshot for default status bar 1`] = `
<div
  class="bg-light border-top py-2 px-3 "
  data-qa="status-bar"
  style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 1000;"
>
  <div
    class="container-fluid"
  >
    <div
      class="d-flex justify-content-between align-items-center"
    >
      <small
        class="text-muted"
        data-qa="status-bar-message"
      >
        Ready
      </small>
      <small
        class="text-muted"
        data-qa="status-bar-timestamp"
      >
        6:00:00 AM
      </small>
    </div>
  </div>
</div>
`;

exports[`StatusBar Snapshot Tests > matches snapshot for status bar with custom message 1`] = `
<div
  class="bg-light border-top py-2 px-3 "
  data-qa="status-bar"
  style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 1000;"
>
  <div
    class="container-fluid"
  >
    <div
      class="d-flex justify-content-between align-items-center"
    >
      <small
        class="text-muted"
        data-qa="status-bar-message"
      >
        Loading data...
      </small>
      <small
        class="text-muted"
        data-qa="status-bar-timestamp"
      >
        6:00:00 AM
      </small>
    </div>
  </div>
</div>
`;

exports[`StatusBar Snapshot Tests > matches snapshot for status bar with empty message 1`] = `
<div
  class="bg-light border-top py-2 px-3 "
  data-qa="status-bar"
  style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 1000;"
>
  <div
    class="container-fluid"
  >
    <div
      class="d-flex justify-content-between align-items-center"
    >
      <small
        class="text-muted"
        data-qa="status-bar-message"
      >
        Ready
      </small>
      <small
        class="text-muted"
        data-qa="status-bar-timestamp"
      >
        6:00:00 AM
      </small>
    </div>
  </div>
</div>
`;

exports[`StatusBar Snapshot Tests > matches snapshot for status bar with long message 1`] = `
<div
  class="bg-light border-top py-2 px-3 "
  data-qa="status-bar"
  style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 1000;"
>
  <div
    class="container-fluid"
  >
    <div
      class="d-flex justify-content-between align-items-center"
    >
      <small
        class="text-muted"
        data-qa="status-bar-message"
      >
        This is a very long status message that might wrap to multiple lines
      </small>
      <small
        class="text-muted"
        data-qa="status-bar-timestamp"
      >
        6:00:00 AM
      </small>
    </div>
  </div>
</div>
`;
